<resources>
    <string name="app_name">Meet</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_drawer_trial">drawerTrial</string>
    <string name="google_maps_key">AIzaSyDaK8am4xKo8XuP5BtNgICip7rW_7Q2Ies</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_real_drawer">RealDrawer</string>
    <string name="title_activity_sidebar">Sidebar</string>
    <string name="title_activity_real">real</string>
    <string name="title_activity_event_settings">real</string>
    <string name="username_label">Email</string>
    <string name="password_label">Password</string>
    <string name="password_confirm_label">Repeat Password</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_trash">TrashActivity</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_event">New Event</string>
    <string name="event_name">Event Name</string>
    <string name="where_to">Where to?</string>
    <string name="with_who">With who?</string>
    <string name="add_participants">+ Add Participants</string>
    <string name="when">When?</string>
    <string name="what_time">What Time?</string>
    <string name="photo">Photo</string>
    <string name="search">+ Add Location</string>
    <string name="desc">+ Add Description</string>
    <string name="friends">Friends</string>
    <string name="action_sign_in_short">Loading...</string>
    <string name="default_event_date">25th MARCH</string>
    <string name="default_event_name">Vamos a por KKO</string>
    <string name="default_event_time">10:30</string>
    <string name="default_event_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</string>
    <string name="default_event_location">Av. Blasco Ibañez</string>
    <string name="default_name">Andrea Pavarotti</string>
    <string name="default_email">andpavaormuypava@gmail.com</string>
    <string name="default_participant_name">Patricio Orlando</string>
    <string name="default_participant_email">porlando@gmail.com</string>
    <string name="default_participant_initials">PO</string>
    <string name="statusDistanceLabel">You are about</string>
    <string name="statusDefaultDistance">2.5 Km</string>
    <string name="statusDefaultCarTime">15 min</string>
    <string name="statusDefaultWalkTime">5 min</string>
    <string name="statusDirections">Directions</string>
    <string name="statusNotifications">Notify</string>
    <string name="error_invalid_password">Invalid Password</string>
    <string name="distanceParticipantOnEvent">2.5Km / 15 min</string>
    <string name="settings">Settings</string>
</resources>
