<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="90dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/accent"
        app:cardCornerRadius="38dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/default_participant_initials"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/nameParticipant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/default_participant_name"
        android:textSize="28sp"
        app:layout_constraintLeft_toRightOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailParticipant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="0dp"
        android:text="@string/default_participant_email"
        app:layout_constraintLeft_toRightOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/nameParticipant" />
</android.support.constraint.ConstraintLayout>